ad spacing fix

--- a/themes/nab-amplify/src/scss/modules/_global.scss
+++ b/themes/nab-amplify/src/scss/modules/_global.scss
@@ -473,6 +473,8 @@
   }
 
 broadstreet-zone-container {
+	padding-top: rem(20);
+  	padding-bottom: rem(20);
 	&:before {
 		content: "Advertisement";
 		display: block;
@@ -481,6 +483,7 @@ broadstreet-zone-container {
 		color: $color__gray-lighter;
 		text-align: center;
 		line-height: 1;
+		padding-bottom: rem(4);
 	}
 }
 .ad {
@@ -489,8 +492,8 @@ broadstreet-zone-container {
   color: $color__gray-lighter;
   text-align: center;
   line-height: 1;
-  padding-top: rem(40);
-  padding-bottom: rem(40);
+  // padding-top: rem(40);
+  // padding-bottom: rem(40);
   @include bp-1024 {
 	  font-size: rem(15);
   }
